--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,16 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Beneficiaries from '../sections/Beneficiaries.astro';
+import Hero from '../sections/Hero.astro';
+import Intro from '../sections/Intro.astro';
+import Stats from '../sections/Stats.astro'; 
+import Route from '../sections/Route.astro';
 ---
 
 <Layout>
-	<Welcome />
+	<Hero />
+	<Intro />
+	<Stats />
+	<Beneficiaries />
+	<Route />
 </Layout>
