Add Leaflet animation. Fire animation when section is in view.

--- a/src/sections/Route.astro
+++ b/src/sections/Route.astro
@@ -4,15 +4,17 @@ import LeafletMap from "../components/LeafletMap.jsx";
 
 <section class="section section--route">
     <div class="inner-container">
-        <h2 class="section__title">Route</h2>
-        <div class="map">
+        <div class="route">
             <LeafletMap client:only="react" />
         </div>
     </div>
 </section>
 
 <style>
-    .section--route .inner-container {
-        max-width: none;
-    }
+    .section--route {
+        padding: 0;
+        .inner-container {
+            max-width: none;
+        }
+    } 
 </style>
