--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,16 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital,wght@0,400;1,400&family=Inter:slnt,wght@-10..0,100..900&display=swap');
 
 
+:root {
+    --font-color: #202020;
+    --blue: #003366;
+    --white: #fff;
+    --yellow: #FFD700;
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-}
-
-:root {
-    --font-color: #202020;
-    --blue: #003366;
-    --yellow: #FFD700;
 }
 
 html {
@@ -41,8 +42,8 @@ p {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'DM Serif Text', serif;
-  font-style: normal;
-  font-weight: 400;
+    font-style: normal;
+    font-weight: 400;
 }
 
 .inner-container {
