--- a/src/sections/Header.astro
+++ b/src/sections/Header.astro
@@ -27,4 +27,8 @@ import Navigation from './Navigation.astro';
         display: flex;
         justify-content: space-between;
     }
+
+    .header__logo {
+        filter: invert(1);
+    }
 </style>
