--- a/src/sections/Hero.astro
+++ b/src/sections/Hero.astro
@@ -6,11 +6,11 @@ let count = 100;
 
 <section class="section section--hero">
     <div class="inner-container">
-        <h2 class="section__title">From St. James to Santiago</h2>
+        <!-- <h2 class="section__title">From St. James to Santiago</h2> -->
         <p class="section__subTitle">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
 
-
-         <div class="tick" data-did-init="handleTickInit">
+        <!-- Countdown Timer -->
+        <div class="tick" data-did-init="handleTickInit">
             <div
                 data-repeat="true"
                 data-layout="horizontal center fit"
