--- a/src/sections/Route.astro
+++ b/src/sections/Route.astro
@@ -4,6 +4,7 @@ import LeafletMap from "../components/LeafletMap.jsx";
 
 <section class="section section--route">
     <div class="inner-container">
+        <h2 class="section__title">Route</h2>
         <div class="route">
             <LeafletMap client:only="react" />
         </div>
@@ -11,10 +12,5 @@ import LeafletMap from "../components/LeafletMap.jsx";
 </section>
 
 <style>
-    .section--route {
-        padding: 0;
-        .inner-container {
-            max-width: none;
-        }
-    } 
+
 </style>
