--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,12 +12,14 @@ import '../styles/global.css';
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>From St. James to Santiago (Blog)</title>
+		<title>From St. James to Santiago</title>
 
 		<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
         <link rel="stylesheet" href="./css/flip.min.css" />
+
 	</head>
 	<body>
+		<audio id="piano-audio" src="/audio/piano-loop.mp3" autoplay loop></audio>
 		<Header />
 		<main class="main">
 			<slot />
